@@ -7,6 +7,7 @@ import json
 import logging
 import os
 import re
+import shutil
 import subprocess
 import time
 
@@ -246,9 +247,15 @@ class FortunePlugin(APRSDPluginBase):
     def command(self, fromcall, message, ack):
         LOG.info("FortunePlugin")
         reply = None
+
+        fortune_path = shutil.which("fortune")
+        if not fortune_path:
+            reply = "Fortune command not installed"
+            return reply
+
         try:
             process = subprocess.Popen(
-                ["/usr/games/fortune", "-s", "-n 60"], stdout=subprocess.PIPE
+                [fortune_path, "-s", "-n 60"], stdout=subprocess.PIPE
             )
             reply = process.communicate()[0]
             reply = reply.decode(errors="ignore").rstrip()
